--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,4 @@ edition = "2021"
 clap = { version = "3.0", features = ["derive"] }
 base64 = "0.13.0"
 serde_bytes = "0.11"
-
-[dependencies.nsm-driver]
-git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
-rev = "4f468c4"
-
-[dependencies.nsm-io]
-git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
-rev = "4f468c4"
+aws-nitro-enclaves-nsm-api = "0.4.0"
