--- a/.github/workflows/build-binary.yaml
+++ b/.github/workflows/build-binary.yaml
@@ -6,13 +6,11 @@ on:
   pull_request:
     branches: [ "master" ]
 
-env:
-  ARCH: x86_64
-
 jobs:
-  build:
+  build-x86_64:
     runs-on: ubuntu-latest
-
+    env:
+      ARCH: x86_64
     steps:
     - uses: actions/checkout@v3
     - name: Build
@@ -20,5 +18,19 @@ jobs:
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3.1.3
       with:
-        name: nsm-cli
+        name: nsm-cli-x86_64
+        path: "./nsm-cli"
+
+  build-aarch64:
+    runs-on: ubuntu-latest
+    env:
+      ARCH: aarch64
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build
+      run: "./build.sh"
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v3.1.3
+      with:
+        name: nsm-cli-aarch64
         path: "./nsm-cli"
